Fixed minor spacing issue

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -33,7 +33,7 @@ p {
 
 .splash-page .panel {
     font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
-    font-weight: 500;
+    font-weight: 600;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.1);
 }
